test/spec_vectors/load/fail/module_33.wat
(module (memory 1) (func (result i64) (i64.load (f32.const 0))))